--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    compileOnly files("libs/MythicMobs-5.11.1.jar")
+
 }
 
 tasks {
