--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
     compileOnly files("libs/MythicMobs-5.11.1.jar")
+    compileOnly files("libs/Magic-10.10.3.jar")
 
     compileOnly("com.github.MilkBowl:VaultAPI:1.7.1")
     implementation("com.zaxxer:HikariCP:5.1.0")
